Licence-compliant bugfix :)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
 Logiciel Initial :
 CloudStrife/Shinra (Quentin Carlier) <cloudstrife@cpcscene.com>
+
+Contributors:
+PulkoMandy/Shinra (Adrien Destugues) <pulkomandy@gmail.com>
